# eta_repository

./: .gitignore  Dockerfile  README.md  addresses_list.json  docker-compose.yml  eta_to_notification.env  initial_data_example.json  output.json  pyproject.toml
.devcontainer/: devcontainer.json
eta_calculator_develop/: main.py  settings.py
eta_calculator_develop/api/: eta_calculation_api.py
eta_calculator_develop/model/: delivery.py  device_message.py  response.py  travel_data.py
eta_calculator_develop/utils/: postprocess_service.py  preprocess_service.py  tomtom_recalculation.py  tomtom_service.py
eta_to_notification_develop/: main.py  memory.py  parser.py  request.py  settings.py  sms_deliver_errors_list.json  sms_deliver_problems.json  sms_deliver_statuses.json  socket_service.py  test.py  test_2.py  zip_code.json
eta_to_notification_develop/api/: check_message_api.py  device_message.py  eta_calculation_api.py
eta_to_notification_develop/database/: json_model.py  settings.py
eta_to_notification_develop/model/: base_model.py  db_models.py  delivery.py  device_message.py  geopy_input_data.py  input_data.py  output_data.py  response.py  tomtom_output_data.py  tracker.py  tracker_update.py  travel_data.py
eta_to_notification_develop/test/: input_dataset_II.json  output.json
eta_to_notification_develop/utils/: address_converter_service.py  eta_calculation_service.py  georeverse.py  message_trigger_service.py  ordinate_address.py  postprocess_service.py  send_request.py  (+5 more)
test/: input_dataset_I.json  input_dataset_II.json  output.json  socket_test.py
(+6 files in other folders)
